tests/fixtures/valid/escape_single_quote.mmd
flowchart TD
    Start --> A[println 'it\\'s a test']
    A --> End
