tests/fixtures/invalid/invalid_escape.mmd
flowchart TD
    Start --> A[println 'hello\world']
    A --> End
